--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
         <section id="main-content">
             <p><a target="_blank" href="http://recurly.com">Recurly</a> is a software as a service company that provides
                 recurring billing management as an outsourced service. The Recurly Java Integration Library is an open
-                source library aimed at simplifying the integration of a java application with Recurly through RecurlyJS
-                and Recurly's REST API.</p>
+                source library aimed at simplifying the integration of a java application with Recurly through
+                <a target="_blank" href="http://js.recurly.com/">RecurlyJS</a> and
+                <a target="_blank" href="http://docs.recurly.com/api">Recurly's REST API</a>.</p>
 
             <h2>Using the library</h2>
 
